--- a/app/views/public/concerts/index.html.erb
+++ b/app/views/public/concerts/index.html.erb
@@ -12,7 +12,7 @@
         <% @concerts.each do |concert|%>
           <div class="card m-2 text-center card-warpper">
             <%= link_to public_concert_path(concert.id) do %>
-              <%= image_tag concert.get_image, size:'230x160', class:"card-image-top" %>
+              <%#= image_tag concert.get_image, size:'230x160', class:"card-image-top" %>
               <% unless concert.is_active %>
                 <div class="not-sale">
                   <p>受付終了</p>
