--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -79,8 +79,8 @@
         <td><%= link_to public_concert_revues_path(r.concert, r) do %> <%# @bookでbook_idをrでreview_idを引数として持ってくる%>
           <%= r.impressions %>
           <div class="star">
-            <% if t.star? %>
-              <% for i in 1..t.star do %>
+            <% if r.star? %>
+              <% for i in 1..r.star do %>
                ★
               <% end %>
             <% end %>
@@ -100,3 +100,31 @@
 </div>
 <%# レビュー一覧表示%>
 
+<style>
+.star-field{
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: left;
+}
+.star-field input[type='radio']{
+    display: none;
+}
+.star-field label{
+    font-size: 50px;
+    padding-right: 10px;
+    color: #ccc;
+    font-size: 30px;
+    cursor: pointer;
+}
+.star-field label:hover,
+.star-field label:hover ~ label,
+.star-field input[type='radio']:checked ~ label{
+    color: rgb(255, 145, 0);
+}
+
+// 一覧表示ページ
+.star{
+  font-size: 50px;
+  color: rgb(255, 145, 0);
+}
+</style>
