interruption concert_evaluation

--- a/app/views/public/home/about.html.erb
+++ b/app/views/public/home/about.html.erb
@@ -6,7 +6,9 @@
           concert_evaluationはコンサートのチケット購入サイトです。<br>
           またご自身のイベント情報を発信することも可能です。<br>
           コンサート情報の発信を依頼される方はこちらまでご連絡ください。<br>
-          <!--concert _evaluation@example.com<br>-->
+          concert _evaluation@example.com<br>
+          連絡される際は、会員id、会員名、コンサート名、コンサート情報の<br>
+          記載をお願いいたします。<br>
         </p>
         <%= image_tag 'audience-1853662_1280', size: "550x350" %>
     </div>
