--- a/app/views/public/comments/index.html.erb
+++ b/app/views/public/comments/index.html.erb
@@ -1,33 +1,37 @@
 <div class="container my-5">
-   <div class="row">
-     <div class="col-10">
+  <div class="row">
+    <div class="col-12">
       <h3><span class="bg-light bg-gradient">コメント一覧</span></h3>
     </div>
-    <table class='table table-hover table-inverse'>
-      <thead>
-        <tr class="bg-light">
-          <th>名前</th>
-          <th>記入日</th>
-          <th>コメント</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @revue.comments.each do |comment| %>
-        <%# image_tag comment.user.get_profile_image(100,100) %>
-        <tr>
-         <td><%= comment.customer.nickname %></td>
-         <td><%= comment.created_at.strftime('%Y/%m/%d') %></td>
-         <td><%= comment.comment %></td>
-        </tr>
-        <% end %>
-      </div>
-      <div>
-       <%= form_with model: [@revue, @comment], url: public_concert_comments_path(concert_id: @revue.concert_id, revue_id: @revue.id), method: :post do |f| %>
-        <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", class: "w-100" %>
-        <%= f.submit "送信する" %>
-       <% end %>
-       <p>コメント件数：<%= @revue.comments.count %></p>
-     </table>
-     </div>
-   </div>
- </div>
+    <div class="col-12">
+      <table class="table table-hover table-inverse">
+        <thead>
+          <tr class="bg-light">
+            <th>名前</th>
+            <th>記入日</th>
+            <th>コメント</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @revue.comments.each do |comment| %>
+            <tr>
+              <td><%= comment.customer.nickname %></td>
+              <td><%= comment.created_at.strftime('%Y/%m/%d') %></td>
+              <td><%= comment.comment %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <p>コメント件数：<%= @revue.comments.count %></p>
+    </div>
+    <div class="col-12">
+      <%= form_with model: [@revue, @comment], url: public_concert_comments_path(concert_id: @revue.concert_id, revue_id: @revue.id), method: :post do |f| %>
+        <div class="form-floating mb-3">
+          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", class: "form-control" %>
+          <label for="floatingTextarea">コメントをここに</label>
+        </div>
+        <%= f.submit "送信する", class: "btn btn-primary" %>
+      <% end %>
+    </div>
+  </div>
+</div>
