--- a/app/views/public/home/about.html.erb
+++ b/app/views/public/home/about.html.erb
@@ -1,16 +1,19 @@
 <div class="container px-5 text-center mx-auto">
-  <div class="row">
-    <div class="px-5 mx-auto ml-auto">
-        <h1 style="font-size: 6em; margin-bottom: 0.3em;">About</h1>
-        <p style="font-size: 1.5em;">
-          concert_evaluationはコンサートのチケット購入サイトです。<br>
-          またご自身のイベント情報を発信することも可能です。<br>
-          コンサート情報の発信を依頼される方はこちらまでご連絡ください。<br>
-          concert _evaluation@example.com<br>
-          連絡される際は、会員id、会員名、コンサート名、コンサート情報の<br>
-          記載をお願いいたします。<br>
-        </p>
-        <%= image_tag 'audience-1853662_1280', size: "550x350" %>
-    </div>
-  </div>
-</div>
+ <div class="row">
+ <div class="px-5 mx-auto ml-auto">
+ <div style="Background color: #f9c5d1; padding: 2em;Border radius: 1em;" >
+ <H1 Style="Font Size: 6em; Margin Bottom: 0.3em; Color: #ff69b4;" > concert_evaluationとは</h1>
+ <p style="font size: 1.5em; color: #4a4a4a;" >
+ concert_evaluationはコンサートのチケット購入サイトです。</br>
+またご自身のイベント情報を発信することも可能です。</br>
+コンサート情報の発信を依頼される方はこちらまでご連絡ください。</br>
+concert _evaluation@example.com</br>
+連絡される際は、会員id、会員名、コンサート名、コンサート情報の</br>
+記載をお願いいたします。</br>
+ </p>
+ <div style="Text alignment: center;" >
+ <%= image_tag 'audience-1853662_1280', size: "550x350" %>
+ </div>
+ </div>
+ </div>
+ </div>
