--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,13 @@
 
   <body>
     <%= render 'layouts/header' %>
-    <%= render 'public/searches/serach' %>
+    <%#= render 'public/searches/serach' %>
+    <div class="search_form">
+      <%= form_with url: public_concerts_path, method: :get do |f| %>
+        <%= f.text_field :tag_name %>
+        <%= f.submit "検索", class: "btn btn-primary" %>
+      <% end %>
+    </div>
       <main>
        <p id="notice"><%= notice %></p>
       </main>
