--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -29,12 +29,12 @@
               </td>
               <td class='text-left'>
                  <% order.order_details.each do |order_detail| %>
-                    <%= order_detail.item.name %>
+                    <%= order_detail.concert.name %>
                  <% end %>
              </td>
               <td><%= order.total_payment %>円</td>
               <td><%= order.status_i18n %></td>
-              <td><%= link_to '表示する', order_path(order.id),class:'btn btn-info' %></td>
+              <td><%= link_to '表示する', public_order_path(order.id),class:'btn btn-info' %></td>
          </tr>
         <% end %>
 
