--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,72 +1,3 @@
-<!--<div class='container'>-->
-<!--  <div class='row'>-->
-<!--    <h3 class='m-4'>注文履歴</h3>-->
-<!--  </div>-->
-<!--  <div class='row'>-->
-<!--    <div class='col-7'>-->
-<!--      <h5 class='font-weight-bolder'>注文情報</h5>-->
-<!--      <table class='table table-bordered'>-->
-<!--        <tr>-->
-<!--          <td class='table-secondary'>注文日</td>-->
-<!--          <td><%= @order.created_at.strftime('%Y/%m/%d') %></td>-->
-<!--        </tr>-->
-<!--        <tr>-->
-<!--           <td>支払い方法</td>-->
-<!--            <td><%= @order.payment_method_i18n %></td>-->
-<!--        </tr>-->
-<!--            <td>ステーテス</td>-->
-<!--            <td><%= @order.status_i18n %></td>-->
-<!--        </tr>-->
-<!--      </table>-->
-<!--    </div>-->
-
-<!--    <div class='col-4 ml-1'>-->
-<!--        <h5 class='font-weight-bolder'>注文詳細</h5>-->
-<!--        <table class='table table-bordered'>-->
-<!--        <tr>-->
-<!--          <td class='table-secondary'>商品合計</td>-->
-<!--          <td class='text-right'><%= @total.to_s(:delimited) %>円</td>-->
-<!--        </tr>-->
-<!--        <tr>-->
-<!--            <td class='table-secondary'>ご請求金額</td>-->
-<!--            <td class='text-right'><%= @order.total_payment %>円</td>-->
-<!--        </tr>-->
-<!--        </table>-->
-<!--      </div>-->
-<!--    </div>-->
-
-<!--    <div class='row flex-column ml-1'>-->
-<!--    <h5 class='font-weight-bolder'>注文商品詳細</h5>-->
-<!--    <table class='table table-bordered col-8 text-center'>-->
-<!--      <thead class='table-secondary'>-->
-<!--        <tr>-->
-<!--          <th class='col-4'>チケット名</th>-->
-<!--          <th class='col-1'>単価(税込)</th>-->
-<!--          <th class='col-1'>枚数</th>-->
-<!--          <th class='col-1'>小計</th>-->
-<!--        </tr>-->
-<!--      </thead>-->
-<!--      <tbody>-->
-<!--        <%  @order_details.each do |order_detail| %>-->
-<!--        <tr>-->
-<!--            <td>-->
-<!--                <%= image_tag order_detail.item.get_image, size:'50x50'%>-->
-<!--                <%= order_detail.item.name %>-->
-<!--            </td>-->
-<!--            <td>-->
-<!--                <%= order_detail.item.add_tax_price %>円</td>-->
-<!--            <td>-->
-<!--                <%= order_detail.sheet %>枚</td>-->
-<!--            <td>-->
-<!--                <%= order_detail.add_total_payment_all %>円</td>-->
-<!--        </tr>-->
-<!--        <% end %>-->
-<!--    　</tbody>-->
-<!--　　</table>-->
-<!--　　</div>-->
-<!--</div>-->
-
-
 <div class='container'>
   <div class='row'>
     <h3 class='m-4'>注文履歴</h3>
@@ -131,11 +62,11 @@
         <%  @order_details.each do |order_detail| %>
         <tr>
             <td>
-                <%= image_tag order_detail.item.get_image, size:'50x50'%>
-                <%= order_detail.item.name %>
+                <%= image_tag order_detail.concert.get_image, size:'50x50'%>
+                <%= order_detail.concert.name %>
             </td>
             <td>
-                <%= order_detail.item.add_tax_price %>円</td>
+                <%= order_detail.concert.add_tax_price %>円</td>
             <td>
                 <%= order_detail.sheet %>個</td>
             <td>
