--- a/app/views/admin/concerts/index.html.erb
+++ b/app/views/admin/concerts/index.html.erb
@@ -12,8 +12,8 @@
                 <tr class="bg-light">
                     <th>コンサートID</th>
                     <th>コンサート名</th>
-                    <!--<th>会員ID</th>-->
-                    <!--<th>アーティスト名</th>-->
+                    <th>会員ID</th>
+                    <th>アーティスト名</th>
                     <th>税抜価格</th>
                     <th>カテゴリー</th>
                     <th>ステータス</th>
@@ -26,6 +26,8 @@
                   <tr>
                       <td><%= concert.id %></td>
                       <td><%= link_to concert.name, admin_concert_path(concert.id)%></td>
+                      <td><%= concert.customer.id %></td>
+                      <td><%= concert.customer.nickname %></td>
                       <td><%= concert.price %></td>
                       <td><%= concert.category.name %></td>
                       <td>
