interruption concert_evaluation

--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -80,9 +80,9 @@
             <%= r.customer.nickname%>
           <% end %>
         </td>
-        <td><%= link_to public_concert_revues_path(r.concert, r) do %> <%# @bookでbook_idをrでreview_idを引数として持ってくる%>
+        <td><%#= link_to public_concert_revues_path(r.concert, r) do %> <%# @bookでbook_idをrでreview_idを引数として持ってくる%>
           <%= r.impressions %>
-          <% end %>
+          <%# end %>
         </td>
         <td>
           <div class="star">
