--- a/app/views/public/concerts/index.html.erb
+++ b/app/views/public/concerts/index.html.erb
@@ -5,7 +5,7 @@
     </div>
     <div class="col offset-md-1">
       <div style="display: flex; align-items: flex-end;">
-        <h2 style="margin-right: 10px;">コンサート一覧</h2>
+        <h2 style="margin-right: 10px;">行事一覧</h2>
         <p>（全<%= @concerts.count %>件）</p>
       </div>
       <div class="d-md-flex flex-wrap">
