interruption concert_evaluation

--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -39,7 +39,7 @@
                  <td><%= (order_detail.price*order_detail.sheet).to_s(:delimited) %></td>
                  <td>
                    <%= form_with model: order_detail, url: admin_order_detail_path(order_detail), method: :patch do |f| %>
-                   <%= f.select :making_status, OrderDetail.making_statuses_i18n.invert %>
+                   <%= f.select :shipping_status, OrderDetail.making_statuses.keys.map {|k| [I18n.t("enums.order_detail.making_status.#{k}"), k]}, { selected: OrderDetail.making_statuses.key(order_detail.shipping_status) } %>
                    <%= f.submit "更新" ,class: "btn btn-success btn-sm" %>
                  <% end %>
                  </td>
