--- a/app/views/admin/concerts/show.html.erb
+++ b/app/views/admin/concerts/show.html.erb
@@ -35,8 +35,8 @@
       </div>
     </div>
   </div>
-  <!--<div class="form-group text-center my-5">-->
-  <!--    <%= link_to "編集する", edit_admin_concert_path, class: "btn btn-success btn-lg" %>-->
-  <!--</div>-->
+  <div class="form-group text-center my-5">
+      <%= link_to "編集する", edit_admin_concert_path, class: "btn btn-success btn-lg" %>
+  </div>
 
 </div>
