interruption concert_evaluation

--- a/app/views/admin/concerts/edit.html.erb
+++ b/app/views/admin/concerts/edit.html.erb
@@ -1,24 +1,24 @@
 <div class="container my-5">
   <div class="row">
     <div class="col-md-10 col-sm-12 mx-6 mx-sm-auto px-auto">
-      <div class="row d-flex justify-content-center mb-4">
+      <!--<div class="row d-flex justify-content-center mb-4">-->
 
-        <h3 class="col-6"><span>コンサート編集</span></h3>
+        <h3 class="mb-5 col-8 d-flex justify-content-center"><span>コンサート編集</span></h3>
 
-        <%= form_with model: @concert, url: admin_concert_path(@concert.id), method: :patch, local:true, class: "container text-center pl-9" do |f| %>
-        <div class="w-50 mx-auto">
-              <dl class="row">
-                <dt class="col-4"><%= f.label :image, "アーティスト画像", class: "text-right" %></dt>
-                <dd class="col-8"><%= f.file_field :image, class: "form-control-file pl-0", accept: "image/*" %></dd>
+        <%= form_with model: @concert, url: admin_concert_path(@concert.id), method: :patch, local:true do |f| %>
+          <div class="w-50 mx-auto">
+            <dl class="row">
+              <dt class="col-4"><%= f.label :image, "アーティスト画像", class: "text-right" %></dt>
+              <dd class="col-8"><%= f.file_field :image, class: "form-control-file pl-0", accept: "image/*" %></dd>
 
-                <dt class="col-4 mt-3"><label for="ice-cream-choice">開催者</label></dt>
-                <dd class="col-8 mt-3"><input list="customers" id="customer-choice" name="concert[customer_name]">
-                <datalist id="customers">
-                  <% Customer.all.each do |c| %>
-                    <option value="<%= c.nickname %>">
-                  <% end %>
-                </datalist>
-                </dd>
+              <dt class="col-4 mt-3"><label for="ice-cream-choice">開催者</label></dt>
+              <dd class="col-8 mt-3"><input list="customers" id="customer-choice" name="concert[customer_name]">
+              <datalist id="customers">
+                <% Customer.all.each do |c| %>
+                  <option value="<%= c.nickname %>">
+                <% end %>
+              </datalist>
+              </dd>
 
                 <!--<dt class="col-4 mt-3"><#%= f.label :name, "アーティスト名", class: "text-right" %></dt>-->
                 <!--<dd class="col-8 mt-3"><%#= f.text_field :name, class: "form-control name", placeholder: "アーティスト名" %></dd>-->
@@ -30,7 +30,7 @@
                 <dd class="col-8 mt-3"><%= f.text_area :introduction, class: "form-control introduction", placeholder: "ここに説明文を記述します" %></dd>
 
                 <dt class="col-4 mt-3"><%= f.label :category_id, "カテゴリー", class: "text-right" %></dt>
-                <dd class="col-8 mt-3"><%= f.collection_select :category_id, Category.all, :id, :name, include_blank: "--選択してください--" %></dd>
+                <dd class="col-8 mt-3"><%= f.collection_select :category_id, Category.all, :id, :name, { include_blank: "--選択してください--" }, { class: "form-control" } %></dd>
 
                 <dt class="col-4 mt-3"><%= label :tag, 'タグ', class: "text-right" %></dt>
                 <dd class="col-8 mt-3"><%= text_field :tag, value: @concert.tags.pluck(:name) %></dd>
