--- a/app/views/admin/home/top.html.erb
+++ b/app/views/admin/home/top.html.erb
@@ -18,7 +18,7 @@
             <% @order.each do |order| %>
               <tr>
                 <td><%= link_to admin_order_path(order.id), class: "text-dark border-bottom border-dark" do %>
-                  <%= l order.created_at %>
+                  <%= l(order.created_at) %>
                   <% end %>
                 </td>
                 <td><%= order.customer.add_full_name %></td>
