interruption concert_evaluation

--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -33,12 +33,7 @@
         <span class="btn btn-sm btn-secondary">受付終了</span>
       </div>
       <% end %>
-    </div>
-  </div>
-</div>
-
-<%# レビュー一覧表示%>
-<div class="container my-5">
+    </div><div class="container my-5">
    <div class="row">
      <div class="col-10">
        <div>
@@ -134,3 +129,7 @@
   color: rgb(255, 145, 0);
 }
 </style>
+  </div>
+</div>
+
+<%# レビュー一覧表示%>
