interruption concert_evaluation

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -17,6 +17,9 @@
           <li class="mr-3">
             <%= link_to "コンサート一覧", public_concerts_path,class: 'nav-link text-light' %>
           </li>
+          <!--<li class="mr-3">-->
+          <!--  <%#= link_to "レビュー一覧", public_concert_revues_path,class: 'nav-link text-light' %>-->
+          <!--</li>-->
           <li class="mr-3">
             <%= link_to "カート", public_cart_items_path,class: 'nav-link text-light' %>
           </li>
