--- a/app/views/admin/tags/show.html.erb
+++ b/app/views/admin/tags/show.html.erb
@@ -1,7 +1,7 @@
 <h1>Tags</h1>
 
-<%= link_to 'Tags List', tags_path %>
-<%= link_to 'Delete', tag_path(@tag), method: :delete, data: {confirm: '関連づいた記事のタグが空になりますがタグを削除しますか？'} %>
+<%= link_to 'Tags List', admin_tags_path %>
+<%= link_to 'Delete', admin_tag_path(@tag), method: :delete, data: {confirm: '関連づいた記事のタグが空になりますがタグを削除しますか？'} %>
 
 <h2>Tag</h2>
 <%# タグ名 %>
@@ -9,9 +9,9 @@
 
 <%# タグに関連付く記事一覧 %>
 <ul>
-  <% @tag.posts.each do |post| %>
+  <% @tag.concerts.each do |concert| %>
     <li>
-      <%= link_to post.title, post_path(post) %>
+      <%= link_to concert.name, admin_concert_path(concert) %>
     </li>
   <% end %>
 </ul>
