--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -12,9 +12,11 @@
             <p class="h5 mb-4" style="margin-left: 50px;">
               <%= @concert.introduction %>
             </p>
-            <% @concert.tags.each do |tag| %>
-             <p><%= tag.name %></p>
-            <% end %>
+              <div class="tag-list">
+               <% @concert.tags.each do |tag| %>
+                <p><%= tag.name %></p>
+               <% end %>
+              </div>
             <p class="h4 mb-4" style="margin-left: 50px;">
               <%= @concert.add_tax_price.to_s(:delimited) %>（<%= @concert.price.to_s(:delimited) %>）円
               <small>(税込)</small>
@@ -94,6 +96,18 @@
     </div>
   </div>
 </div>
+
+<style>
+  .tag-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+  .tag-list p {
+  margin-right: 10px;
+}
+</style>
+
 <style>
   .star-field{
       display: flex;
