--- a/app/views/admin/concerts/show.html.erb
+++ b/app/views/admin/concerts/show.html.erb
@@ -21,9 +21,11 @@
       </div>
       <div class="form-group row">
         <p class="col-3 h5">タグ</p>
-        <p class="col-8"><% @concert.tags.each do |tag| %></p>
-        <p class="col-8"><%= link_to tag.name, admin_tag_path(tag) %></p>
-        <% end %>
+        <div class="col-8">
+          <% @concert.tags.each do |tag| %>
+           <%= link_to tag.name, admin_tag_path(tag), class: "mr-3" %>
+          <% end %>
+        </div>
       </div>
       <div class="form-group row">
         <p class="col-3 h5">チケット税込価格<br>(税抜価格)</p>
