interruption concert_evaluation

--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -3,38 +3,35 @@
     <div class="col-sm-2">
       <%= render 'public/tmp/category_list', categories: @categories %>
     </div>
-    <div class="col-md-8"  style="margin-top: 50px;">
-      <div class="d-flex" style="margin-left: 50px;">
-        <%= image_tag @concert.get_image, size:'300x200' %>
-        <div class="ml-4 pl-4">
-          <h3 class="font-weight-bold mb-3" style="margin-left: 50px;"><%= @concert.name%></h3>
-          <div class="d-flex flex-column justify-content-between h-75">
-            <p class="h5 mb-4" style="margin-left: 50px;">
-              <%= @concert.introduction %>
-            </p>
-              <div class="tag-list">
-               <% @concert.tags.each do |tag| %>
-                <p><%= tag.name %></p>
-               <% end %>
-              </div>
-            <p class="h4 mb-4" style="margin-left: 50px;">
-              <%= @concert.add_tax_price.to_s(:delimited) %>（<%= @concert.price.to_s(:delimited) %>）円
-              <small>(税込)</small>
-            </p>
+    <div class="col-md-8" style="margin-top: 50px;">
+     <div class="d-flex">
+      <%= image_tag @concert.get_image, size: '300x200', class: "mr-4" %>
+      <div>
+       <h3 class="font-weight-bold mb-3"><%= @concert.name %></h3>
+        <p class="h5 mb-4">アーティスト名 : <%= @concert.customer.nickname %></p>
+        <p class="h5 mb-4"><%= @concert.introduction %></p>
+         <div class="tag-list mb-4">
+          <% @concert.tags.each do |tag| %>
+           <span class="badge badge-secondary mr-2"><%= tag.name %></span>
+          <% end %>
+        </div>
+        <p class="h4 mb-4">
+          <%= @concert.add_tax_price.to_s(:delimited) %>（<%= @concert.price.to_s(:delimited) %>）円
+          <small>(税込)</small>
+        </p>
+        <% if @concert.is_active %>
+          <% if current_customer %>
+            <div class="text-right">
+              <%= render 'public/tmp/sheet', cart:@cart, concert:@concert %>
+            </div>
+          <% end %>
+        <% else %>
+          <div class="text-right">
+            <span class="btn btn-sm btn-secondary">受付終了</span>
           </div>
-        </div>
-      </div>
-      <% if @concert.is_active %>
-        <% if current_customer %>
-        <div class="w-50 mt-4 ml-auto text-right">
-          <%= render 'public/tmp/sheet', cart:@cart, concert:@concert %>
-        </div>
         <% end %>
-      <% else %>
-      <div class="text-right">
-        <span class="btn btn-sm btn-secondary">受付終了</span>
       </div>
-      <% end %>
+     </div>
     </div>
 <div class="container my-5">
   <h3><span class="bg-light bg-gradient">レビュー一覧</span></h3>
