--- a/app/views/public/concerts/index.html.erb
+++ b/app/views/public/concerts/index.html.erb
@@ -1,32 +1,33 @@
-<div class="container" id="item-warpper">
+<div class="container" id="item-wrapper">
   <div class="row">
-    <div class="col-sm-2", style="margin-left: -150px;">
+    <div class="col-md-2">
       <%= render 'public/tmp/category_list', categories: @categories %>
     </div>
-    <div class="col offset-md-1">
-      <div style="display: flex; align-items: flex-end;">
-        <h2 style="margin-right: 10px;">行事一覧</h2>
+    <div class="col-md-9">
+      <div class="d-flex align-items-end">
+        <h2 class="mr-3">行事一覧</h2>
         <p>（全<%= @concerts.count %>件）</p>
       </div>
       <div class="d-md-flex flex-wrap">
         <% @concerts.each do |concert|%>
-          <div class="card m-2 text-center card-warpper">
+          <div class="card m-2 text-center card-wrapper">
             <%= link_to public_concert_path(concert.id) do %>
-              <%= image_tag concert.get_image, size:'230x160', class:"card-image-top" %>
+              <%= image_tag concert.get_image, size: '230x160', class: "card-image-top" %>
               <% unless concert.is_active %>
                 <div class="not-sale">
                   <p>受付終了</p>
                 </div>
               <% end %>
-              <div class="card-body text-dark py-2 font-weight-bold ">
+              <div class="card-body text-dark py-2 font-weight-bold">
                 <%= link_to concert.name, public_concert_path(concert.id), class: "card-title mb-2" %>
                 税込<%= concert.add_tax_price.to_s(:delimited) %>円
               </div>
+              <p>アーティスト名 : <%= concert.customer.nickname %></p>
             <% end %>
           </div>
         <% end %>
       </div>
-      <div id="paginate-warpper" class="text-center">
+      <div id="paginate-wrapper" class="text-center">
         <%= paginate @concerts %>
       </div>
     </div>
