--- a/app/views/public/comments/index.html.erb
+++ b/app/views/public/comments/index.html.erb
@@ -4,7 +4,7 @@
       <h3><span class="bg-light bg-gradient">コメント一覧</span></h3>
     </div>
     <div class="col-12">
-      <table class="table table-hover table-inverse">
+<!--      <table class="table table-hover table-inverse">
         <thead>
           <tr class="bg-light">
             <th>名前</th>
@@ -22,10 +22,13 @@
           <% end %>
         </tbody>
       </table>
-      <p>コメント件数：<%= @revue.comments.count %></p>
+      <p>コメント件数：<%= @revue.comments.count %></p> -->
     </div>
     <div class="col-12">
-      <%= form_with model: [@revue, @comment], url: public_concert_comments_path(concert_id: @revue.concert_id, revue_id: @revue.id), method: :post do |f| %>
+      <div class="comments_area">
+        <%= render 'public/comments/comment', revue_comments: @revue.comments %>
+      </div>
+      <%= form_with model: [@revue, @comment], url: public_concert_comments_path(concert_id: @revue.concert_id, revue_id: @revue.id), method: :post, local: false do |f| %>
         <div class="form-floating mb-3">
           <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", class: "form-control" %>
           <label for="floatingTextarea">コメントをここに</label>
