--- a/app/views/public/concerts/index.html.erb
+++ b/app/views/public/concerts/index.html.erb
@@ -1,3 +1,17 @@
+<div class="container">
+  <div class="row justify-content-start"> <!-- justify-content-startに変更 -->
+    <div class="col-lg-6 col-md-8">
+      <%= form_with url: public_concerts_path, method: :get, class: "form-inline" do |f| %>
+        <div class="input-group">
+          <%= f.text_field :tag_name, class: "form-control", placeholder: "タグ名を入力してください" %>
+          <div class="input-group-append">
+            <%= f.submit "検索", class: "btn btn-primary" %>
+          </div>
+        </div>
+      <% end %>
+    </div>
+  </div>
+</div>
 <div class="container" id="item-wrapper">
   <div class="row">
     <div class="col-md-2">
