--- a/app/views/public/concerts/show.html.erb
+++ b/app/views/public/concerts/show.html.erb
@@ -12,7 +12,7 @@
         <p class="h5 mb-4"><%= @concert.introduction %></p>
          <div class="tag-list mb-4">
           <% @concert.tags.each do |tag| %>
-           <span class="badge badge-secondary mr-2"><%= tag.name %></span>
+           <span class="badge badge-secondary mr-2"><%= link_to tag.name, public_concerts_path(tag_name: tag.name) %></span>
           <% end %>
         </div>
         <p class="h4 mb-4">
