--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -47,7 +47,7 @@
            </tr>
           </table>
           <div class="mt-10 offset-md-8">
-              <%= link_to "編集する",  edit_public_customer_path(@customer), class: 'btn btn-success' %>
+              <%= link_to "編集する",  edit_public_customer_path(@customer), class: 'btn btn-success' if @customer.email != "guest@example.com" %>
           </div>
 
           <div class="row no-gutters">
