--- a/app/views/admin/concerts/index.html.erb
+++ b/app/views/admin/concerts/index.html.erb
@@ -7,7 +7,7 @@
       <%= link_to " + ", new_admin_concert_path, class: "btn btn-light rounded-circle" %>
     </div>
 
-            <table class='table table-hover table-inverse'>
+            <table class="table table-bordered border-dark">
               <thead>
                 <tr class="bg-light">
                     <th>コンサートID</th>
