--- a/app/views/admin/home/top.html.erb
+++ b/app/views/admin/home/top.html.erb
@@ -3,11 +3,11 @@
     <div class="col-lg-10 col-sm-12 mx-auto">
       <div class="row mb-3">
         <div class="col-12">
-          <h4><span class="bg-light bg-gradient">注文一覧</span></h4>
+          <h3><span class="bg-light bg-gradient">注文一覧</span></h3>
         </div>
       </div>
       <div class="row">
-        <table class="table table-borderless border-top mt-3">
+        <table class="table table-bordered border-dark">
           <thead class="bg-light">
             <th>購入日時</th>
             <th>購入者</th>
