--- a/app/views/admin/concerts/edit.html.erb
+++ b/app/views/admin/concerts/edit.html.erb
@@ -33,20 +33,30 @@
                 <dd class="col-8 mt-3"><%= f.collection_select :category_id, Category.all, :id, :name, { include_blank: "--選択してください--" }, { class: "form-control" } %></dd>
 
                 <dt class="col-4 mt-3"><%= label :tag, 'タグ', class: "text-right" %></dt>
-                <dd class="col-8 mt-3"><%= text_field :tag, value: @concert.tags.pluck(:name) %></dd>
+                <dd class="col-8 mt-3"><%= text_field :tag,{}, value: @concert.tags.pluck(:name).join(" ") %></dd>
                 <small>スペースで区切ることで複数指定できます。</small><br>
 
                 <dt class="col-4 mt-3"><%= f.label :price, "チケット税抜価格", class: "text-right" %></dt>
                 <dd class="col-8 mt-3 input-group d-flex align-items-end"><%= f.text_field :price, class: "form-control price", placeholder: "1000" %>円</dd>
 
                 <dt class="col-4 mt-3"><label class="text-right">販売ステータス</label></dt>
-
                 <dd class="col-8 mt-3">
                   <%= f.radio_button :is_active, :true %>
                   <%= f.label :is_active, "販売中", value: "true", class: "mr-5" %>
                   <%= f.radio_button :is_active, :false %>
                   <%= f.label :is_active, "販売停止中", value: "false" %>
                 </dd>
+
+                <dd class="col-8 mt-3">
+                  <%= f.label(:public, for: nil, class:'concert-status__label') do %>
+                    <%= f.radio_button :status, 0 %>
+                    <%= I18n.t('activerecord.attributes.concert.statuses.public') %>
+                  <% end %>
+                  <%= f.label(:private, for: nil, class:'concert-status__label') do %>
+                    <%= f.radio_button :status, 1 %>
+                    <%= I18n.t('activerecord.attributes.concert.statuses.private') %>
+                  <% end %>
+                 </dd>
               </dl>
           </div>
         <div class="form-group text-center mt-5">
