--- a/app/views/admin/concerts/show.html.erb
+++ b/app/views/admin/concerts/show.html.erb
@@ -16,6 +16,10 @@
         <p class="col-8"><%= @concert.introduction %></p>
       </div>
       <div class="form-group row">
+        <p class="col-3 h5">開催者</p>
+        <p class="col-8"><%= @concert.customer.nickname %></p>
+      </div>
+      <div class="form-group row">
         <p class="col-3 h5">カテゴリー</p>
         <p class="col-8"><%= @concert.category.name %></p>
       </div>
@@ -37,7 +41,7 @@
       </div>
       <div class="form-group row">
         <p class="col-3 h5">公開/非公開</p>
-        <p class="col-8"><%= @concert.status == 0 ? '公開中' : '非公開' %></p>
+        <p class="col-8"><%= @concert.status_public? ? '公開中' : '非公開' %></p>
       </div>
     </div>
   </div>
