--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -32,7 +32,7 @@
                     <%= order_detail.concert.name %>
                  <% end %>
              </td>
-              <td><%= order.total_payment %>円</td>
+              <td><%= order.total_payment.to_s(:delimited) %>円</td>
               <td><%= order.status_i18n %></td>
               <td><%= link_to '表示する', public_order_path(order.id),class:'btn btn-info' %></td>
          </tr>
